[package]
name = "sage_proteomics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sage_proteomics"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
sage-core = { git = "https://github.com/lazear/sage.git", tag = "v0.7.1" }
sage-cloudpath = { git = "https://github.com/lazear/sage.git", tag = "v0.7.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"